# usda-nutrition-visualizer

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _typos.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: deptry-check.yaml
assets/delete/: pre-commit.yaml
assets/misc/: decisions.md  equations.md  feature-list.md  glossary.md  resources.md  roadmap.md
data/: food_nutrient_database.parquet  nutritional_guidelines.json
src/: app.py  nutrient_processor.py  nutritional_guidelines.py  usda_api.py
