[project]
name = "baseline-template-change"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "A template I find useful for setting up Python and R repositories."
license = "Apache-2.0"
readme = "README.md"
keywords = ["design-patterns", "template", "standards"]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[project.urls]
Repository = "https://github.com/O957/O957-Template"
Issues = "https://github.com/O957/O957-Template/issues"
"Author GitHub" = "https://github.com/O957"

[tool.ruff.lint.mccabe]
max-complexity = 15


[tool.deptry]
known_first_party = ["nutrient_processor", "nutritional_guidelines", "usda_api", "app"]
